# ask-chatbot

./: Cargo.toml
src/: cli.rs  database.rs  embeddings.rs  main.rs
