[package]
name = "ask-chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.54"
serde = "1.0.228"
surrealdb = "2.4.1"
tokio = { version = "1.49.0", features = ["full", "macros", "rt-multi-thread"] }
candle-core = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main" }
hf-hub = "0.4.3"
tokenizers = "0.22.2"
